--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,14 +1,16 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-*::-webkit-scrollbar {
-  display: none;
+html,
+body {
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, Montserrat, BlinkMacSystemFont, Segoe UI, Roboto,
+		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
 * {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+	box-sizing: border-box;
 }
