added create invoice form fields

--- a/src/components/common/form/input-radio/input-radio.module.scss
+++ b/src/components/common/form/input-radio/input-radio.module.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+
 
 .checkbox {
 	opacity: 0;
@@ -27,7 +27,7 @@
 }
 
 .checkbox + label:before {
-	background-color: var(--color-primary);
+	background-color: var(--color-color1);
 	border-radius: 50%;
 	bottom: 0;
 	content: '';
@@ -45,7 +45,7 @@
 }
 .checkbox:checked + label {
 	transition: all 0.4s;
-	border: 1px solid var(--color-primary);
+	border: 1px solid var(--color-color1);
 }
 .checkbox:checked + label:before {
 	transition: all 0.4s cubic-bezier(1, 0, 0.4, 1);
